infra/client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            name: client-pod
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: client
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: client-srv
spec:
    type: NodePort
    selector:
        app: client
    ports:
        - port: 80
          targetPort: 3000
