infra/comments-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: comments-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: comments
    template:
        metadata:
            name: comments-pod
            labels:
                app: comments
        spec:
            containers:
                - name: comments
                  image: comments
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
    name: comments-srv
spec:
    type: NodePort
    selector:
        app: comments
    ports:
        - port: 4001
          targetPort: 4001
