infra/eventbus-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: event-bus-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: event-bus
    template:
        metadata:
            name: event-bus-pod
            labels:
                app: event-bus
        spec:
            containers:
                - name: event-bus
                  image: event-bus
                  ports:
                      - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
    name: event-bus-srv
spec:
    type: NodePort
    selector:
        app: event-bus
    ports:
        - port: 4005
          targetPort: 4005
