infra/posts-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: posts-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: posts
    template:
        metadata:
            name: posts-pod
            labels:
                app: posts
        spec:
            containers:
                - name: posts
                  image: posts
                  ports:
                      - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
    name: posts-clusterip-srv
spec:
    type: NodePort
    selector:
        app: posts
    ports:
        - port: 4000
          targetPort: 4000
